--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=development
+spring.profiles.active=production
 
 spring.http.multipart.max-file-size=128KB
 spring.http.multipart.max-request-size=128KB
