--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -7,3 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+security.require-ssl=true
+security.user.password=${ADMINPASSWORD}
+admin.password=${ADMINPASSWORD}
+user.password=${USERPASSWORD}
