--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.profiles.active=development
+spring.profiles.active=default
 spring.http.multipart.max-file-size=128KB
 spring.http.multipart.max-request-size=128KB
+
+security.user.password=${MYPASSWORD}
